# web-crawler

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: lint.yml
crawl_executor/: crawler.py  main.py
crawl_executor/static/: crawl.css
crawl_executor/templates/: crawl.html
crawl_executor/utils/: downloader.py  exceptions.py  http.py  logging_config.py  parser.py  url_queue.py
crawl_executor/utils/data_extractors/amazon/: product.py
static/css/: crawl.css  home.css
static/js/: crawl.js
templates/: crawl.html  home.html
